src/components/MovieDisplayer.css
.displayer-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-end;
    padding: 0px;
    gap: 44px;

    margin: auto;
    margin-top: 64px;

    width: 1360px;
    height: 47px;
}

.result-description {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 0px;
    gap: 4px;

    width: 210px;
    height: 47px;
}

.result-description h4 {
    width: 147px;
    height: 24px;
    margin: 0;
    padding: 0;
    white-space: nowrap;

    font-weight: 600;
    font-size: 20px;
    line-height: 24px;

    color: #FFFFFF;
}

.result-description p {
    width: 210px;
    height: 19px;
    margin: 0;
    padding: 0;
    white-space: nowrap;

    font-weight: 400;
    font-size: 16px;
    line-height: 19px;

    color: rgba(255, 255, 255, 0.6);


}

.order-selector {
    box-sizing: border-box;
    padding: 8px 12px;
    gap: 8px;

    width: 253px;
    height: 40px;

    font-size: 16px;
    line-height: 19px;

    color: #FFFFFF;

    background: transparent;
    border: 1px solid rgba(102, 105, 106, 0.2);
    border-radius: 8px;
    margin: 0;
}


/*Content*/

.results-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0px;
    gap: 60px;

    margin: auto;
    margin-top: 44px;

    width: 1360px;
    height: 1096px;
}

.cards-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    flex-wrap: wrap;
    padding: 0px;
    gap: 40px;

    width: 1360px;
    height: 1004px;
}

.pagination {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 0px;
    gap: 8px;

    width: 1360px;
    height: 32px;
}







.order-selector option {
    
    color: black;
}

